--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "main": "npx ts-node src/index.ts"
+    "main": "npx ts-node src/index.ts",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,10 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@types/jest": "^29.5.3",
     "@types/node": "^20.4.2",
+    "jest": "^29.6.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1"
   }
 }
